<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopRegistrationActivity">

    <TextView
        android:id="@+id/tvDatabaseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shopregist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/regist_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDatabaseName" />

    <EditText
        android:id="@+id/shopregist_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="店舗名を入力してください"
        app:layout_constraintWidth_percent="0.55"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/shopregist_category"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_title" />

    <EditText
        android:id="@+id/shopregist_address_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="住所を入力してください"
        app:layout_constraintWidth_percent="0.55"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/shopregist_category"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_name_text" />

    <EditText
        android:id="@+id/shopregist_hours_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="営業時間を入力してください"
        app:layout_constraintWidth_percent="0.55"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/shopregist_category"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_address_text" />


    <EditText
        android:id="@+id/shopregist_category_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="カテゴリーを入力してください"
        app:layout_constraintWidth_percent="0.55"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/shopregist_category"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_hours_text" />

    <TextView
        android:id="@+id/shopregist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_title" />

    <TextView
        android:id="@+id/shopregist_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_name_text" />

    <TextView
        android:id="@+id/shopregist_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopregist_hours_text" />

    <TextView
        android:id="@+id/shopregist_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hours"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shopregist_hours_text" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onCancelButtonClick"
        android:text="@string/bt_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_gomap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onRegistButtonClick"
        android:text="@string/bt_regist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_cancel" />

    <Button
        android:id="@+id/bt_search"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:onClick="onSearchButtonClick"
        android:text="@string/bt_search"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/shopregist_name_text"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>